# social_media

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
posts/: models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_unique_together.py
users/: serializers.py  tests.py  urls.py  views.py
